@@ -1,3 +1,6 @@
+2002-07-07  Willem Jan Palensitjn <wjpalenstijn@users.sourceforge.net>
+	* ucinternal.cc: allow small changes to loop-array in mid-loop in SI
+
 2002-07-05  Jeff Freedman  <jsf@usf-cf-x86-linux-1>
 
 	* actors.cc: Magic boots keep you from getting poisoned in swamp
